--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -12,6 +12,7 @@
 
 
 <form action="{% url 'upload_image' %}" method="post" enctype="multipart/form-data" id="uploader">
+    {% csrf_token %}
     Zvolte zdrojový obraz:<br>
     <input type="file" name="fileToUpload" id="fileToUpload"><br>
     <input type="submit" value="Upload Image" name="submit">
