--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -97,6 +97,7 @@
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
+                    alert(xhttp.responseText);
                     var image = document.getElementById("image_original");
                     image.src = image.src + '1';
                     redraw();
