--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -130,7 +130,7 @@
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
-
+                alert(xhttp.responseText);
                 body[0].style.backgroundColor = 'white';
                 var image = document.getElementById("image_final");
                 image.src = image.src + '1';
