--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -89,15 +89,22 @@
     }
 
     function uploadImage() {
+
         var upload_form = document.getElementById("uploader");
 
         upload_form.onsubmit = function (e) {
+
+            var body = document.getElementsByTagName('body');
+            body[0].style.backgroundColor = 'blue';
+
             var data = new FormData(upload_form);
             csrftoken = getCookie('csrftoken');
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     //alert(xhttp.responseText);
+
+                    body[0].style.backgroundColor = 'white';
                     var image = document.getElementById("image_original");
                     image.src = image.src + '1';
                     redraw();
