--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -30,6 +30,7 @@
         <option value="transform_rotate">Otočit obraz</option>
         <option value="transform_crop">Oříznout obraz</option>
         <option value="filter_smooth">Vyhladit obraz</option>
+        <option value="detection_corner">Detekce hran</option>
     </select>
 
     <button onclick="addBlock(this)">+</button>
