--- a/MysakBP/templates/index.html
+++ b/MysakBP/templates/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<div id='loader'
+     style="position: fixed; z-index: -5; width: 100%; height: 100%; background-image: url('./static/loading_spinner.gif'); opacity: 0.2; visibility: hidden;">
+</div>
 <div id='files'>
     <form method="post" enctype="multipart/form-data" id="uploader">
         {% csrf_token %}
@@ -31,7 +34,7 @@
 
 <div id="edit_block_pattern" style="display: none;">
     <select onchange="validateSelects(this); categoryFill(this);">
-        <option value="none">Zvolte kategorii operace</option>
+        <option value="None">Zvolte kategorii operace</option>
         <option value="files">Soubory</option>
         <option value="color">Barvy</option>
         <option value="transform">Transformace</option>
@@ -39,11 +42,14 @@
         <option value="detection">Detekce</option>
     </select><br>
     <select onchange="generate_params_form(this);redraw();" style="visibility: hidden;">
-        <option value="none">Kappa pride</option>
+        <option value="None">Kappa pride</option>
     </select>
     <div class="params"></div>
     <button onclick="addBlock(this)">+</button>
     <button class="delete_button" onclick="deleteBlock(this)">X</button>
+    <div class="photo_frame">
+
+    </div>
 </div>
 
 <script>
@@ -56,6 +62,7 @@
     var static_path = window.location.pathname.replace('/', '');
     document.getElementById('files_upload_form_user').value = static_path;
     var category = {};
+    var loader = document.getElementById('loader');
 
     function initCategoryObject() {
         var files_load = {
@@ -187,7 +194,7 @@
             ]
         };
 
-        category.files = {'load': files_load, 'save': files_save};
+        category['files'] = {'load': files_load, 'save': files_save};
         category.color = {'gray': color_bw, 'filter': color_blue, 'convert': color_convert};
         category.transform = {'rotate': transform_rotate, 'crop': transform_crop};
         category.filter = {'smooth': filter_smooth};
@@ -242,7 +249,7 @@
     function validateSelects(sender) {
         var sender_block = sender.parentNode;
         selects = sender_block.getElementsByTagName('select');
-        if (selects[0].value === 'none') {
+        if (selects[0].value === 'None') {
             selects[1].style.visibility = 'hidden';
         } else {
             selects[1].style.visibility = 'visible';
@@ -264,6 +271,7 @@
         sender_block_parent.removeChild(sender_block);
         redraw();
         validateButtons();
+        setBlocksBackgrounds();
 
     }
 
@@ -272,6 +280,7 @@
         var new_block = prepareNewBlock();
         insertAfter(new_block, sender_block);
         validateButtons();
+        setBlocksBackgrounds();
     }
 
     function prepareNewBlock() {
@@ -283,10 +292,32 @@
         return new_block;
     }
 
+    function setBlocksBackgrounds() {
+        var photo_frames = document.getElementsByClassName("photo_frame");
+        for (var i = 0; i < photo_frames.length - 1; i++) {
+            var selects = photo_frames[i].parentNode.getElementsByTagName('select');
+            if (selects[0].value != 'None' && selects[1].value != 'None'){
+                photo_frames[i].style.backgroundImage = 'url(./static/' + static_path + '/thumb_' + i + '.png?'+makeid()+')';
+            }
+
+        }
+    }
+
+
+    function makeid() {
+        var text = "";
+        var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+        for (var i = 0; i < 10; i++)
+            text += possible.charAt(Math.floor(Math.random() * possible.length));
+        return text;
+    }
+
+
     function insertFirstBlock() {
         var pattern = document.getElementById("block_container");
         var new_block = prepareNewBlock();
         pattern.appendChild(new_block);
+        setBlocksBackgrounds();
     }
 
 
@@ -298,7 +329,7 @@
 
         var none_option = new Option();
         none_option.text = 'Zvolte operaci';
-        none_option.value = 'none';
+        none_option.value = 'None';
         selects[1].appendChild(none_option);
 
         for (var i in category[selects[0].value]) {
@@ -314,8 +345,7 @@
 
         var upload_form = document.getElementById("uploader");
 
-        var body = document.getElementsByTagName('body');
-        body[0].style.backgroundColor = 'blue';
+        loader.style.visibility = 'visible';
 
         var data = new FormData(upload_form);
         csrftoken = getCookie('csrftoken');
@@ -323,27 +353,41 @@
         xhttp.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 //alert(xhttp.responseText);
-
-                body[0].style.backgroundColor = 'white';
-                var image = document.getElementById("image_original");
-                image.src = image.src + '1';
-                redraw();
+                loader.style.visibility = 'hidden';
+                updateFiles()
             }
         };
         xhttp.open("POST", "./upload", true);
-
         xhttp.setRequestHeader('X-CSRFToken', csrftoken)
         xhttp.send(data);
 
     }
 
+    function getOperations() {
+
+        loader.style.visibility = 'visible';
+
+        csrftoken = getCookie('csrftoken');
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                console.log(xhttp.responseText);
+                loader.style.visibility = 'hidden';
+            }
+        };
+        xhttp.open("POST", "./get_operations", true);
+        xhttp.setRequestHeader('X-CSRFToken', csrftoken)
+        xhttp.send();
+
+    }
+
 
     function redraw() {
-        var body = document.getElementsByTagName('body');
-        body[0].style.backgroundColor = 'blue';
+        loader.style.visibility = 'visible';
         var edit_blocks = document.getElementsByClassName('edit_block');
 
         var data = [];
+        data[0] = [static_path]
         for (i = 0; i < edit_blocks.length; i++) {
             var first_select = edit_blocks[i].getElementsByTagName("select")[0];
             var second_select = edit_blocks[i].getElementsByTagName("select")[1];
@@ -372,7 +416,9 @@
         xhttp.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 //alert(xhttp.responseText);
-                body[0].style.backgroundColor = 'white';
+                loader.style.visibility = 'hidden';
+
+                setBlocksBackgrounds();
             }
         };
         xhttp.open("POST", "./work", true);
@@ -395,37 +441,82 @@
         xatom.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 var images = JSON.parse(xatom.responseText);
-                for(var img in images){
-                    var img_element = document.createElement('img');
-                    img_element.src = './static/'+ static_path +'/'+ images[img];
-                    img_element.style.width = '400px';
-                    uploaded_images_div.appendChild(img_element);
+                for (var img in images) {
+                    var img_div_element = document.createElement('div');
+                    img_div_element.style.width = '200px';
+                    img_div_element.style.height = '200px';
+                    //img_div_element.style.background = "red"
+                    img_div_element.style.backgroundPosition = 'center';
+                    img_div_element.style.backgroundRepeat = 'no-repeat';
+                    img_div_element.style.backgroundSize = 'contain';
+                    img_div_element.style.backgroundImage = 'url(./static/' + static_path + '/' + images[img] + ')';
+                    img_div_element.innerText = images[img];
+                    var delete_button = document.createElement('button');
+                    delete_button.innerText = 'smazat';
+                    delete_button.data = images[img];
+                    delete_button.addEventListener("click", deleteImage);
+                    img_div_element.appendChild(delete_button);
+                    uploaded_images_div.appendChild(img_div_element);
                 }
 
 
             }
         };
         xatom.open("POST", "./get_files/" + static_path, true);
-
         xatom.setRequestHeader('X-CSRFToken', csrftoken)
         xatom.send();
-
-
     }
+
+    function deleteImage(img_name) {
+        console.log(img_name.srcElement.data);
+        var xatom = new XMLHttpRequest();
+        xatom.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                updateFiles();
+            }
+        }
+        xatom.open("POST", "./delete_file", true);
+        xatom.setRequestHeader('X-CSRFToken', csrftoken)
+        xatom.send(JSON.stringify([static_path, img_name.srcElement.data]));
+
+    };
 
     insertFirstBlock();
     redraw();
     validateButtons();
     initCategoryObject();
+    updateFiles();
+    setBlocksBackgrounds();
 
 </script>
 <style>
     .edit_block {
-        background-color: aquamarine;
+        background-color: #FFF;
         border-radius: 5px;
         display: inline-block;
         padding: 5px;
+        margin: 5px;
+        width: 200px;
+        min-height: 200px;
         float: left;
+        box-shadow: 0px 0px 26px #000;
+        position: relative;
+        z-index: 0;
+
+    }
+
+    .photo_frame {
+        position: absolute;
+        background-color: white;
+        bottom: 0px;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        border-radius: 5px;
+        left: 0px;
+        width: 100%;
+        height: 100px;
+        z-index: -1;
 
     }
 
@@ -434,7 +525,7 @@
     }
 
     #files {
-        width: 30%;
+        width: 40%;
         float: right;
     }
 </style>
